# CoffeeRate

./: .gitignore  README.md
Customer/: BackgroundImage.qml  CMakeLists.txt  CloseButton.qml  CustomButton.qml  Fonts.qrc  Images.qrc  InfoMessage.qml  LoginPage.qml  Main.qml  MainPage.qml  MapPage.qml  RegisterPage.qml  ReturnButton.qml  ReviewsPage.qml  Star.qml  StarRating.qml  UserMapMarker.qml  client.cpp  client.h  main.cpp  message.cpp  message.h  threadsafelist.h
Server/: CMakeLists.txt  Setup.sql  cafedata.cpp  cafedata.h  cafereview.cpp  cafereview.h  connection.cpp  connection.h  main.cpp  message.cpp  message.h  messageresponder.cpp  messageresponder.h  server.cpp  server.h  sqlservice.cpp  sqlservice.h  threadsafelist.h
